# gdenv

./: .gitignore  CLAUDE.md  CLOUDFLARE_SETUP.md  Cargo.toml  README.md  action.yml  cloudflare-worker.js  devenv.nix  gdenv_schema.toml  install-templates.ps1  install-templates.sh  install.ps1  install.sh  wrangler.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  release.yml
gdenv/: Cargo.toml
gdenv-lib/: Cargo.toml  README.md
gdenv-lib/src/: addons.rs  cargo.rs  command_runner.rs  config.rs  download_client.rs  file_sync.rs  gdextension_config.rs  git.rs  github.rs  godot.rs  godot_version.rs  installer.rs  lib.rs  logging.rs  migrate.rs  path_extension.rs  project_specification.rs
gdenv-lib/src/api/: errors.rs  godot_runner.rs  mod.rs
gdenv-lib/src/test_helpers/: mock_download_client.rs  mock_git_client.rs  mod.rs
gdenv-lib/test-data/godot_runner_mock_project/: Cargo.toml  gdenv.toml
gdenv-lib/test-data/godot_runner_mock_project/godot/: main.tscn  project.godot
gdenv-lib/test-data/godot_runner_mock_project/rust/: Cargo.toml
gdenv-lib/test-data/test-addon1-repo/addons/test-addon1/: changed_file.txt  file_changed_to_directory.txt  plugin.cfg
gdenv-lib/test-data/test-addon1v2-repo/addons/test-addon1/: changed_file.txt  directory_changed_to_file.txt  new_file.txt  plugin.cfg
gdenv-lib/test-data/test-addon2-repo/addons/test-addon2/: plugin.cfg
gdenv/src/: cli.rs  download_client.rs  godot.rs  main.rs  migrate.rs  ui.rs
gdenv/src/commands/: editor.rs  mod.rs  run.rs  schema.rs  sync.rs
gdenv/src/commands/godot/: cache.rs  current.rs  fetch.rs  install.rs  list.rs  uninstall.rs  use_cmd.rs
scripts/: seed-release-cache.py
src/: cli.rs  config.rs  data_dir_config.rs  download_client.rs  error.rs  github.rs  godot.rs  godot_version.rs  installer.rs  main.rs  migrate.rs  project_specification.rs  ui.rs
src/commands/: cache.rs  current.rs  fetch.rs  install.rs  installed.rs  list.rs  mod.rs  run.rs  uninstall.rs  update.rs  use_cmd.rs
src/commands/godot/: cache.rs  current.rs  fetch.rs  install.rs  list.rs  mod.rs  uninstall.rs  use_cmd.rs
tests/: marker_output.rs
