[package]
name = "gdenv"
version = "0.2.0"
edition = "2024"
description = "The best command-line tool to install and switch between multiple versions of Godot."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bytemeadow/gdenv"
authors = ["David Chavez <david@dcvz.io>"]

[[bin]]
name = "gdenv"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client for downloads and GitHub API
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
indicatif = "0.18"
colored = "3.1"

# File system and paths
dirs = "6.0"

# Archive extraction
zip = "7.2"

# Regex for version parsing
regex = "1.12"
once_cell = "1.21"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Version parsing
semver = { version = "1.0", features = ["serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform recursive directory navigation
walkdir = "2.5.0"

[dev-dependencies]
# Easy temporary directory handling for tests
tempdir = "0.3.7"
