[workspace]
resolver = "3"
members = [
    "gdenv",
    "gdenv-lib"
]


[workspace.package]
version = "0.2.2"
edition = "2024"
description = "The best command-line tool to install and switch between multiple versions of Godot."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bytemeadow/gdenv"
authors = ["David Chavez <david@dcvz.io>"]


[workspace.dependencies]
gdenv-lib = { path = "./gdenv-lib", version = "0.2.2" }

clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client for downloads and GitHub API
reqwest = { version = "0.13", features = ["json", "stream"] }
futures-util = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal UI
indicatif = "0.18"
colored = "3.1"

# File system and paths
dirs = "6.0"

# Archive extraction
zip = "7.2"

# Regex for version parsing
regex = "1.12"
once_cell = "1.21"

# Error handling
anyhow = "1.0"

# Version parsing
semver = { version = "1.0", features = ["serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform recursive directory navigation
walkdir = "2.5.0"

# Easy temporary directory handling for tests
tempdir = "0.3.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-indicatif = "0.3"

# TOML serialization
toml = "0.9.8"
