[package]
name = "gdenv-lib"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true


[dependencies]
# Async runtime
tokio.workspace = true

# HTTP client for downloads and GitHub API
reqwest.workspace = true
futures-util.workspace = true

# JSON serialization
serde.workspace = true
serde_json.workspace = true

# Terminal UI
colored.workspace = true

# File system and paths
dirs.workspace = true

# Archive extraction
zip.workspace = true

# Regex for version parsing
regex.workspace = true
once_cell.workspace = true

# Error handling
anyhow.workspace = true

# Version parsing
semver.workspace = true

# Date/time handling
chrono.workspace = true

# Cross-platform recursive directory navigation
walkdir.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-indicatif.workspace = true

# TOML serialization
toml.workspace = true

[dev-dependencies]
# Easy temporary directory handling for tests
tempdir.workspace = true
